Integrate firebase and update deps

--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "@types/jest": "^24.0.17",
     "@types/react-redux": "^7.1.1",
     "@types/redux-logger": "^3.0.7",
-    "next": "9.0.3",
+    "firebase": "^6.4.0",
+    "next": "canary",
     "next-offline": "^4.0.3",
-    "react": "16.9.0",
-    "react-dom": "16.9.0",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
     "react-redux": "^7.1.0",
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
