Add PWA configuration

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "deploy": "now",
+    "deploy": "yarn build && now",
     "lint": "tslint --project tsconfig.json",
     "lint:fix": "tslint --fix --project tsconfig.json",
     "test": "yarn jest",
@@ -21,7 +21,7 @@
     "@types/redux-logger": "^3.0.7",
     "firebase": "^6.4.0",
     "next": "canary",
-    "next-offline": "^4.0.3",
+    "next-offline": "5.0.0-beta.3",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.0",
