--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.3.1",
+    "@material-ui/icons": "^4.2.1",
     "@siegrift/tsfunct": "^1.3.2",
     "@types/jest": "^24.0.17",
     "@types/react-redux": "^7.1.1",
@@ -24,6 +25,7 @@
     "next-offline": "5.0.0-beta.3",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-google-button": "^0.5.3",
     "react-redux": "^7.1.0",
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
