--- a/package.json
+++ b/package.json
@@ -35,10 +35,16 @@
   "devDependencies": {
     "@types/node": "^12.7.1",
     "@types/react": "^16.9.1",
+    "husky": "^3.0.5",
     "jest": "^24.8.0",
     "tslint": "^5.18.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-react": "^4.0.0",
     "typescript": "^3.5.3"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn lint && yarn test"
+    }
   }
 }
