--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@siegrift/tsfunct": "^1.3.2",
     "@types/jest": "^24.0.17",
     "@types/react-redux": "^7.1.1",
+    "@types/react-select": "^3.0.4",
     "@types/redux-logger": "^3.0.7",
+    "@types/uuid": "^3.4.5",
     "firebase": "^6.4.0",
     "next": "canary",
     "next-offline": "5.0.0-beta.3",
@@ -27,10 +29,12 @@
     "react-dom": "^16.9.0",
     "react-google-button": "^0.5.3",
     "react-redux": "^7.1.0",
+    "react-select": "^3.0.4",
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "ts-jest": "^24.0.2"
+    "ts-jest": "^24.0.2",
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "@types/node": "^12.7.1",
