--- a/package.json
+++ b/package.json
@@ -14,14 +14,19 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
+    "@date-io/date-fns": "^1.3.11",
     "@material-ui/core": "^4.3.1",
     "@material-ui/icons": "^4.2.1",
+    "@material-ui/pickers": "^3.2.6",
     "@siegrift/tsfunct": "^1.3.2",
+    "@types/classnames": "^2.2.9",
     "@types/jest": "^24.0.17",
     "@types/react-redux": "^7.1.1",
     "@types/react-select": "^3.0.4",
     "@types/redux-logger": "^3.0.7",
     "@types/uuid": "^3.4.5",
+    "classnames": "^2.2.6",
+    "date-fns": "^2.0.0-beta.5",
     "firebase": "^6.4.0",
     "next": "canary",
     "next-offline": "5.0.0-beta.3",
