--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/jest": "^24.0.17",
     "@types/react-redux": "^7.1.1",
     "@types/react-select": "^3.0.4",
+    "@types/react-test-renderer": "^16.9.0",
     "@types/redux-logger": "^3.0.7",
     "@types/uuid": "^3.4.5",
     "classnames": "^2.2.6",
@@ -35,6 +36,7 @@
     "react-google-button": "^0.5.3",
     "react-redux": "^7.1.0",
     "react-select": "^3.0.4",
+    "react-test-renderer": "^16.9.0",
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
@@ -42,8 +44,12 @@
     "uuid": "^3.3.3"
   },
   "devDependencies": {
+    "@types/enzyme": "^3.10.3",
     "@types/node": "^12.7.1",
     "@types/react": "^16.9.1",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "enzyme-to-json": "^3.4.0",
     "husky": "^3.0.5",
     "jest": "^24.8.0",
     "tslint": "^5.18.0",
