--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,7 @@
 {
   "compilerOptions": {
     "target": "es6",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
@@ -22,16 +18,8 @@
       }
     ],
     "strict": true,
-    "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true
+    "noImplicitReturns": true
   },
-  "exclude": [
-    "node_modules"
-  ],
-  "include": [
-    "next-env.d.ts",
-    "lib/**/*.ts",
-    "pages/**/*.tsx",
-    "lib/**/*.tsx"
-  ]
+  "exclude": ["node_modules", "**/*.ts"],
+  "include": ["next-env.d.ts", "lib/**/*.ts", "pages/**/*.tsx", "lib/**/*.tsx"]
 }
