--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "enzyme-to-json": "^3.4.0",
     "husky": "^3.0.5",
     "jest": "^24.8.0",
+    "mockdate": "^2.0.5",
     "tslint": "^5.18.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-react": "^4.0.0",
