--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@types/react-redux": "^7.1.1",
     "@types/react-select": "^3.0.4",
     "@types/react-test-renderer": "^16.9.0",
+    "@types/react-virtualized-auto-sizer": "^1.0.0",
+    "@types/react-window": "^1.8.1",
     "@types/redux-logger": "^3.0.7",
     "@types/uuid": "^3.4.5",
     "classnames": "^2.2.6",
@@ -37,6 +39,8 @@
     "react-redux": "^7.1.0",
     "react-select": "^3.0.4",
     "react-test-renderer": "^16.9.0",
+    "react-virtualized-auto-sizer": "^1.0.2",
+    "react-window": "^1.8.5",
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
