--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@siegrift/tsfunct": "^1.3.2",
     "@types/classnames": "^2.2.9",
     "@types/jest": "^24.0.17",
+    "@types/lodash.debounce": "^4.0.6",
     "@types/react-redux": "^7.1.1",
     "@types/react-select": "^3.0.4",
     "@types/react-test-renderer": "^16.9.0",
@@ -31,6 +32,7 @@
     "classnames": "^2.2.6",
     "date-fns": "^2.0.0-beta.5",
     "firebase": "^6.4.0",
+    "lodash.debounce": "^4.0.8",
     "next": "canary",
     "next-offline": "5.0.0-beta.3",
     "react": "^16.9.0",
