--- a/package.json
+++ b/package.json
@@ -18,10 +18,17 @@
     "@material-ui/core": "^4.3.1",
     "@material-ui/icons": "^4.2.1",
     "@material-ui/pickers": "^3.2.6",
+    "@nivo/bar": "^0.59.2",
+    "@nivo/line": "^0.59.3",
+    "@nivo/pie": "^0.59.1",
+    "@nivo/sunburst": "^0.59.1",
     "@siegrift/tsfunct": "^1.3.2",
     "@types/classnames": "^2.2.9",
     "@types/jest": "^24.0.17",
+    "@types/lodash": "^4.14.141",
     "@types/lodash.debounce": "^4.0.6",
+    "@types/lodash.every": "^4.6.6",
+    "@types/lodash.range": "^3.2.6",
     "@types/react-redux": "^7.1.1",
     "@types/react-select": "^3.0.4",
     "@types/react-test-renderer": "^16.9.0",
@@ -32,7 +39,10 @@
     "classnames": "^2.2.6",
     "date-fns": "^2.0.0-beta.5",
     "firebase": "^6.4.0",
+    "lodash": "^4.17.15",
     "lodash.debounce": "^4.0.8",
+    "lodash.every": "^4.6.0",
+    "lodash.range": "^3.2.0",
     "next": "canary",
     "next-offline": "5.0.0-beta.3",
     "react": "^16.9.0",
@@ -46,6 +56,7 @@
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0",
     "ts-jest": "^24.0.2",
     "uuid": "^3.3.3"
   },
