--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint:fix": "tslint --fix --project tsconfig.json",
     "test": "yarn jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "test:update-snapshots": "jest --updateSnapshot"
   },
   "dependencies": {
     "@date-io/date-fns": "^1.3.11",
@@ -64,12 +65,14 @@
     "@types/enzyme": "^3.10.3",
     "@types/node": "^12.7.1",
     "@types/react": "^16.9.1",
+    "@types/redux-mock-store": "^1.0.1",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "enzyme-to-json": "^3.4.0",
     "husky": "^3.0.5",
     "jest": "^24.8.0",
     "mockdate": "^2.0.5",
+    "redux-mock-store": "^1.5.3",
     "tslint": "^5.18.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-react": "^4.0.0",
