--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@nivo/line": "^0.59.3",
     "@nivo/pie": "^0.59.1",
     "@nivo/sunburst": "^0.59.1",
-    "@siegrift/tsfunct": "^1.3.2",
+    "@siegrift/tsfunct": "^1.4.1",
     "@types/classnames": "^2.2.9",
     "@types/jest": "^24.0.19",
     "@types/lodash": "^4.14.144",
@@ -75,7 +75,7 @@
     "tslint": "^5.20.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-react": "^4.1.0",
-    "typescript": "^3.6.4"
+    "typescript": "^3.7.0-beta"
   },
   "husky": {
     "hooks": {
