Default amount for tags

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "deploy": "yarn build && now",
-    "lint": "tslint --project tsconfig.json",
+    "lint": "tslint-config-prettier-check ./tslint.json && tslint --project tsconfig.json",
     "lint:fix": "tslint --fix --project tsconfig.json",
     "test": "yarn jest",
     "test:watch": "jest --watch",
@@ -44,7 +44,7 @@
     "lodash.debounce": "^4.0.8",
     "lodash.every": "^4.6.0",
     "lodash.range": "^3.2.0",
-    "next": "9.0.5",
+    "next": "9.1.6",
     "next-offline": "5.0.0-beta.8",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
