--- a/package.json
+++ b/package.json
@@ -15,67 +15,67 @@
     "test:update-snapshots": "jest --updateSnapshot"
   },
   "dependencies": {
-    "@date-io/date-fns": "^1.3.11",
-    "@material-ui/core": "^4.5.1",
+    "@date-io/date-fns": "^1.3.13",
+    "@material-ui/core": "^4.8.1",
     "@material-ui/icons": "^4.5.1",
-    "@material-ui/pickers": "^3.2.7",
-    "@nivo/bar": "^0.59.2",
-    "@nivo/line": "^0.59.3",
-    "@nivo/pie": "^0.59.1",
-    "@nivo/sunburst": "^0.59.1",
+    "@material-ui/pickers": "^3.2.8",
+    "@nivo/bar": "^0.61.1",
+    "@nivo/line": "^0.61.1",
+    "@nivo/pie": "^0.61.1",
+    "@nivo/sunburst": "^0.61.0",
     "@siegrift/tsfunct": "^1.4.1",
     "@types/classnames": "^2.2.9",
-    "@types/jest": "^24.0.19",
-    "@types/lodash": "^4.14.144",
+    "@types/jest": "^24.0.25",
+    "@types/lodash": "^4.14.149",
     "@types/lodash.debounce": "^4.0.6",
     "@types/lodash.every": "^4.6.6",
     "@types/lodash.range": "^3.2.6",
     "@types/react-redux": "^7.1.5",
-    "@types/react-select": "^3.0.5",
+    "@types/react-select": "^3.0.8",
     "@types/react-test-renderer": "^16.9.1",
     "@types/react-virtualized-auto-sizer": "^1.0.0",
     "@types/react-window": "^1.8.1",
     "@types/redux-logger": "^3.0.7",
-    "@types/uuid": "^3.4.5",
+    "@types/uuid": "^3.4.6",
     "classnames": "^2.2.6",
-    "date-fns": "^2.6.0",
-    "firebase": "^7.2.1",
+    "date-fns": "^2.8.1",
+    "firebase": "^7.6.1",
     "lodash": "^4.17.15",
     "lodash.debounce": "^4.0.8",
     "lodash.every": "^4.6.0",
     "lodash.range": "^3.2.0",
     "next": "9.1.6",
     "next-offline": "5.0.0-beta.8",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
-    "react-google-button": "^0.5.3",
-    "react-redux": "^7.1.1",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-google-button": "^0.7.0",
+    "react-redux": "^7.1.3",
     "react-select": "^3.0.8",
-    "react-test-renderer": "^16.11.0",
+    "react-test-renderer": "^16.12.0",
     "react-virtualized-auto-sizer": "^1.0.2",
     "react-window": "^1.8.5",
-    "redux": "^4.0.4",
+    "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
-    "ts-jest": "^24.1.0",
+    "ts-jest": "^24.2.0",
     "uuid": "^3.3.3"
   },
   "devDependencies": {
-    "@types/enzyme": "^3.10.3",
-    "@types/node": "^12.11.7",
-    "@types/react": "^16.9.10",
-    "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.15.1",
+    "@types/enzyme": "^3.10.4",
+    "@types/node": "^13.1.1",
+    "@types/react": "^16.9.17",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "enzyme-to-json": "^3.4.3",
-    "firebase-mock": "^2.2.10",
-    "husky": "^3.0.9",
+    "firebase-mock": "^2.3.1",
+    "husky": "^3.1.0",
     "jest": "^24.8.0",
     "mockdate": "^2.0.5",
-    "tslint": "^5.20.0",
+    "tslint": "^5.20.1",
     "tslint-config-prettier": "^1.18.0",
     "tslint-react": "^4.1.0",
-    "typescript": "^3.7.0-beta"
+    "typescript": "^3.7.4"
   },
   "husky": {
     "hooks": {
