--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "next build",
     "start": "next start",
     "deploy": "yarn build && now",
-    "lint": "tslint-config-prettier-check ./tslint.json && tslint --project tsconfig.json",
-    "lint:fix": "tslint --fix --project tsconfig.json",
+    "lint": "tslint-config-prettier-check ./tslint.json && prettier --check \"@(lib|pages)/**/*.tsx\" && tslint --project tsconfig.json",
+    "lint:fix": "prettier --write \"@(lib|pages)/**/*.tsx\" tslint --fix --project tsconfig.json",
     "test": "yarn jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
@@ -72,6 +72,7 @@
     "husky": "^3.1.0",
     "jest": "^24.8.0",
     "mockdate": "^2.0.5",
+    "prettier": "1.19.1",
     "tslint": "^5.20.1",
     "tslint-config-prettier": "^1.18.0",
     "tslint-react": "^4.1.0",
@@ -81,5 +82,11 @@
     "hooks": {
       "pre-commit": "yarn lint && yarn test"
     }
+  },
+  "prettier": {
+    "semi": false,
+    "singleQuote": true,
+    "trailingComma": "all",
+    "arrowParens": "always"
   }
 }
