--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-google-button": "^0.7.0",
+    "react-number-format": "^4.3.1",
     "react-redux": "^7.1.3",
     "react-select": "^3.0.8",
     "react-test-renderer": "^16.12.0",
