--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "lodash.debounce": "^4.0.8",
     "lodash.every": "^4.6.0",
     "lodash.range": "^3.2.0",
+    "mathjs-expression-parser": "^1.0.2",
     "next": "9.1.6",
     "next-offline": "5.0.0-beta.8",
     "react": "^16.12.0",
