--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.8.1",
     "@material-ui/icons": "^4.5.1",
+    "@material-ui/lab": "^4.0.0-alpha.38",
     "@material-ui/pickers": "^3.2.8",
     "@nivo/bar": "^0.61.1",
     "@nivo/line": "^0.61.1",
