--- a/package.json
+++ b/package.json
@@ -3,16 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
     "build": "next build",
-    "start": "next start",
     "deploy": "yarn build && now",
+    "dev": "next dev",
     "lint": "tslint-config-prettier-check ./tslint.json && prettier --check \"@(lib|pages)/**/*.tsx\" && tslint --project tsconfig.json",
     "lint:fix": "prettier --write \"@(lib|pages)/**/*.tsx\" tslint --fix --project tsconfig.json",
+    "start": "next start",
     "test": "yarn jest",
-    "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "test:update-snapshots": "jest --updateSnapshot"
+    "test:update-snapshots": "jest --updateSnapshot",
+    "test:watch": "jest --watch"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn lint && yarn test"
+    }
+  },
+  "prettier": {
+    "arrowParens": "always",
+    "semi": false,
+    "singleQuote": true,
+    "trailingComma": "all"
   },
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
@@ -25,26 +36,10 @@
     "@nivo/pie": "^0.61.1",
     "@nivo/sunburst": "^0.61.0",
     "@siegrift/tsfunct": "^1.4.1",
-    "@types/classnames": "^2.2.9",
-    "@types/jest": "^24.0.25",
-    "@types/lodash": "^4.14.149",
-    "@types/lodash.debounce": "^4.0.6",
-    "@types/lodash.every": "^4.6.6",
-    "@types/lodash.range": "^3.2.6",
-    "@types/react-redux": "^7.1.5",
-    "@types/react-select": "^3.0.8",
-    "@types/react-test-renderer": "^16.9.1",
-    "@types/react-virtualized-auto-sizer": "^1.0.0",
-    "@types/react-window": "^1.8.1",
-    "@types/redux-logger": "^3.0.7",
-    "@types/uuid": "^3.4.6",
     "classnames": "^2.2.6",
     "date-fns": "^2.8.1",
     "firebase": "^7.6.1",
     "lodash": "^4.17.15",
-    "lodash.debounce": "^4.0.8",
-    "lodash.every": "^4.6.0",
-    "lodash.range": "^3.2.0",
     "mathjs-expression-parser": "^1.0.2",
     "next": "9.1.6",
     "next-offline": "5.0.0-beta.8",
@@ -54,21 +49,31 @@
     "react-icons": "^3.8.0",
     "react-number-format": "^4.3.1",
     "react-redux": "^7.1.3",
-    "react-select": "^3.0.8",
-    "react-test-renderer": "^16.12.0",
     "react-virtualized-auto-sizer": "^1.0.2",
     "react-window": "^1.8.5",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
-    "ts-jest": "^24.2.0",
     "uuid": "^3.3.3"
   },
   "devDependencies": {
+    "@types/classnames": "^2.2.9",
     "@types/enzyme": "^3.10.4",
+    "@types/jest": "^24.0.25",
+    "@types/lodash": "^4.14.149",
+    "@types/lodash.debounce": "^4.0.6",
+    "@types/lodash.every": "^4.6.6",
+    "@types/lodash.range": "^3.2.6",
     "@types/node": "^13.1.1",
     "@types/react": "^16.9.17",
+    "@types/react-redux": "^7.1.5",
+    "@types/react-select": "^3.0.8",
+    "@types/react-test-renderer": "^16.9.1",
+    "@types/react-virtualized-auto-sizer": "^1.0.0",
+    "@types/react-window": "^1.8.1",
+    "@types/redux-logger": "^3.0.7",
+    "@types/uuid": "^3.4.6",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "enzyme-to-json": "^3.4.3",
@@ -77,20 +82,11 @@
     "jest": "^24.8.0",
     "mockdate": "^2.0.5",
     "prettier": "1.19.1",
+    "react-test-renderer": "^16.12.0",
+    "ts-jest": "^24.2.0",
     "tslint": "^5.20.1",
     "tslint-config-prettier": "^1.18.0",
     "tslint-react": "^4.1.0",
     "typescript": "^3.7.4"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "yarn lint && yarn test"
-    }
-  },
-  "prettier": {
-    "semi": false,
-    "singleQuote": true,
-    "trailingComma": "all",
-    "arrowParens": "always"
   }
 }
