--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,11 @@
 .env*
 
 # debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+*.log
+
+# cypress screenshots and videos
+cypress/videos
+cypress/screenshots
+
+# vscode
+.vscode
