--- a/package.json
+++ b/package.json
@@ -9,25 +9,39 @@
     "build": "next build",
     "deploy": "yarn build && now --prod",
     "dev": "next dev",
-    "lint": "tslint-config-prettier-check ./tslint.json && prettier --check \"@(lib|pages)/**/*.tsx\" && tslint --project tsconfig.json",
-    "lint:fix": "prettier --write \"@(lib|pages)/**/*.tsx\" tslint --fix --project tsconfig.json",
-    "start": "next start",
-    "test": "yarn jest",
-    "test:coverage": "jest --coverage",
-    "test:update-snapshots": "jest --updateSnapshot",
-    "test:watch": "jest --watch",
+    "check-eslint": "eslint --print-config pages/index.js | eslint-config-prettier-check",
+    "run-eslint": "eslint \"lib/**\" \"pages/**\" \"cypress/integration/**\"",
+    "lint": "yarn check-eslint && prettier --check \"@(lib|pages)/**/*.tsx\" && yarn run-eslint",
+    "lint:fix": "prettier --write \"@(lib|pages)/**/*.tsx\" \"@(lib|pages)/**/*.ts\" && yarn run-eslint --fix",
+    "test": "yarn test:unit && yarn test:e2e",
+    "test:unit": "jest",
+    "test:unit-coverage": "jest --coverage",
+    "test:unit-update": "jest --updateSnapshot",
+    "test:unit-ui": "majestic",
+    "test:unit-watch": "jest --watch",
+    "test:e2e-start-server": "next dev -p 3999",
+    "test:e2e-run": "cypress run",
+    "test:e2e-open": "cypress open",
+    "test:e2e": "start-server-and-test 'yarn test:e2e-start-server' http://localhost:3999 'yarn test:e2e-run'",
     "analyze": "cross-env ANALYZE=true next build"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "yarn lint && yarn test"
+      "pre-commit": "yarn lint-staged",
+      "pre-push": "yarn test"
     }
   },
   "prettier": {
     "arrowParens": "always",
     "semi": false,
     "singleQuote": true,
-    "trailingComma": "all"
+    "trailingComma": "all",
+    "tabWidth": 2
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "yarn lint"
+    ]
   },
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
@@ -62,37 +76,50 @@
     "uuid": "^3.4.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.8.4",
+    "@bahmutov/add-typescript-to-cypress": "^2.1.2",
     "@next/bundle-analyzer": "^9.2.1",
+    "@testing-library/cypress": "^5.3.0",
     "@types/classnames": "^2.2.9",
-    "@types/enzyme": "^3.10.4",
     "@types/jest": "^24.9.1",
     "@types/lodash": "^4.14.149",
-    "@types/lodash.debounce": "^4.0.6",
-    "@types/lodash.every": "^4.6.6",
-    "@types/lodash.range": "^3.2.6",
+    "@types/next": "^9.0.0",
     "@types/node": "^13.5.0",
     "@types/react": "^16.9.19",
+    "@types/react-dom": "^16.9.5",
     "@types/react-redux": "^7.1.7",
     "@types/react-select": "^3.0.10",
-    "@types/react-test-renderer": "^16.9.2",
     "@types/react-virtualized-auto-sizer": "^1.0.0",
     "@types/react-window": "^1.8.1",
     "@types/redux-logger": "^3.0.7",
     "@types/uuid": "^3.4.6",
+    "@typescript-eslint/eslint-plugin": "^2.19.2",
+    "@typescript-eslint/parser": "^2.19.2",
+    "babel-eslint": "^10.0.3",
+    "babel-jest": "^25.1.0",
+    "babel-loader": "^8.0.6",
     "cross-env": "^7.0.0",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2",
-    "enzyme-to-json": "^3.4.3",
+    "cypress": "^4.0.2",
+    "cypress-testing-library": "^4.0.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-config-react-app": "^5.2.0",
+    "eslint-loader": "^3.0.3",
+    "eslint-plugin-cypress": "^2.10.1",
+    "eslint-plugin-flowtype": "^4.6.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-jest": "^23.7.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.18.3",
     "firebase-mock": "^2.3.2",
     "husky": "^4.2.1",
     "jest": "^25.1.0",
-    "mockdate": "^2.0.5",
+    "lint-staged": "^10.0.7",
+    "majestic": "^1.6.2",
     "prettier": "1.19.1",
-    "react-test-renderer": "^16.12.0",
+    "start-server-and-test": "^1.10.8",
     "ts-jest": "^25.0.0",
-    "tslint": "^6.0.0",
-    "tslint-config-prettier": "^1.18.0",
-    "tslint-react": "^4.2.0",
     "typescript": "^3.7.5"
   }
 }
