--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es6",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": ["es5", "es6", "es7", "es2017", "dom"],
     "allowJs": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
@@ -12,14 +12,13 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "plugins": [
-      {
-        "name": "typescript-tslint-plugin"
-      }
-    ],
     "strict": true,
-    "noImplicitReturns": true
+    "noImplicitReturns": true,
+    "suppressImplicitAnyIndexErrors": true,
+    "types": ["node", "jest"],
+    "rootDirs": ["lib", "pages"],
+    "outDir": "build/lib"
   },
-  "exclude": ["node_modules", "**/*.ts"],
+  "exclude": ["node_modules", ".*"],
   "include": ["next-env.d.ts", "lib/**/*.ts", "pages/**/*.tsx", "lib/**/*.tsx"]
 }
