--- a/package.json
+++ b/package.json
@@ -45,81 +45,85 @@
   },
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
-    "@material-ui/core": "^4.9.2",
+    "@material-ui/core": "^4.9.11",
     "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.42",
-    "@material-ui/pickers": "^3.2.9",
+    "@material-ui/lab": "^4.0.0-alpha.48",
+    "@material-ui/pickers": "^3.2.10",
     "@nivo/bar": "^0.61.1",
     "@nivo/line": "^0.61.1",
     "@nivo/pie": "^0.61.1",
     "@nivo/sunburst": "^0.61.0",
-    "@siegrift/tsfunct": "^1.5.6",
+    "@siegrift/tsfunct": "^1.6.0",
     "classnames": "^2.2.6",
-    "date-fns": "^2.9.0",
-    "firebase": "^7.7.0",
+    "date-fns": "^2.12.0",
+    "dotenv": "^8.2.0",
+    "firebase": "^7.14.2",
     "lodash": "^4.17.15",
     "mathjs-expression-parser": "^1.0.2",
-    "next": "9.1.6",
-    "next-offline": "5.0.0-beta.8",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-google-button": "^0.7.0",
-    "react-icons": "^3.8.0",
-    "react-number-format": "^4.3.1",
-    "react-redux": "^7.1.3",
+    "next": "9.3.5",
+    "next-offline": "5.0.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-google-button": "^0.7.1",
+    "react-icons": "^3.10.0",
+    "react-number-format": "^4.4.1",
+    "react-redux": "^7.2.0",
     "react-virtualized-auto-sizer": "^1.0.2",
     "react-window": "^1.8.5",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
-    "uuid": "^3.4.0"
+    "uuid": "^7.0.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.4",
+    "@babel/core": "^7.9.0",
     "@bahmutov/add-typescript-to-cypress": "^2.1.2",
-    "@next/bundle-analyzer": "^9.2.1",
-    "@testing-library/cypress": "^5.3.0",
-    "@types/classnames": "^2.2.9",
-    "@types/jest": "^25.1.2",
-    "@types/lodash": "^4.14.149",
+    "@next/bundle-analyzer": "^9.3.5",
+    "@testing-library/cypress": "^6.0.0",
+    "@types/classnames": "^2.2.10",
+    "@types/jest": "^25.2.1",
+    "@types/lodash": "^4.14.150",
     "@types/next": "^9.0.0",
-    "@types/node": "^13.7.1",
-    "@types/react": "^16.9.19",
-    "@types/react-dom": "^16.9.5",
+    "@types/node": "^13.13.2",
+    "@types/react": "^16.9.34",
+    "@types/react-dom": "^16.9.6",
     "@types/react-redux": "^7.1.7",
-    "@types/react-select": "^3.0.10",
+    "@types/react-select": "^3.0.11",
     "@types/react-virtualized-auto-sizer": "^1.0.0",
-    "@types/react-window": "^1.8.1",
+    "@types/react-window": "^1.8.2",
     "@types/redux-logger": "^3.0.7",
-    "@types/uuid": "^3.4.7",
-    "@typescript-eslint/eslint-plugin": "^2.19.2",
-    "@typescript-eslint/parser": "^2.19.2",
-    "babel-eslint": "^10.0.3",
-    "babel-jest": "^25.1.0",
-    "babel-loader": "^8.0.6",
-    "cross-env": "^7.0.0",
-    "cypress": "^4.0.2",
+    "@types/uuid": "^7.0.3",
+    "@typescript-eslint/eslint-plugin": "^2.29.0",
+    "@typescript-eslint/parser": "^2.29.0",
+    "babel-eslint": "^10.1.0",
+    "babel-jest": "^25.4.0",
+    "babel-loader": "^8.1.0",
+    "cross-env": "^7.0.2",
     "cypress-testing-library": "^4.0.0",
     "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.0",
-    "eslint-config-react-app": "^5.2.0",
-    "eslint-loader": "^3.0.3",
-    "eslint-plugin-cypress": "^2.10.1",
-    "eslint-plugin-flowtype": "^4.6.0",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-jest": "^23.7.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-config-react-app": "^5.2.1",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-cypress": "^2.10.3",
+    "eslint-plugin-flowtype": "^4.7.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-jest": "^23.8.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-react": "^7.18.3",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-react": "^7.19.0",
     "firebase-mock": "^2.3.2",
-    "husky": "^4.2.3",
-    "jest": "^25.1.0",
-    "lint-staged": "^10.0.7",
+    "husky": "^4.2.5",
+    "jest": "^25.4.0",
+    "lint-staged": "^10.1.7",
     "majestic": "^1.6.2",
-    "prettier": "1.19.1",
-    "start-server-and-test": "^1.10.8",
-    "ts-jest": "^25.2.0",
-    "typescript": "^3.7.5"
+    "prettier": "2.0.5",
+    "start-server-and-test": "^1.11.0",
+    "ts-jest": "^25.4.0",
+    "typescript": "^3.8.3"
+  },
+  "peerDependencies": {
+    "//": "Cypress installation breaks on deploy",
+    "cypress": "^4.4.1"
   }
 }
