--- a/package.json
+++ b/package.json
@@ -55,9 +55,11 @@
     "@nivo/sunburst": "^0.61.0",
     "@siegrift/tsfunct": "^1.6.0",
     "classnames": "^2.2.6",
+    "cookie-session": "^1.4.0",
     "date-fns": "^2.12.0",
     "dotenv": "^8.2.0",
     "firebase": "^7.14.2",
+    "firebase-admin": "^8.11.0",
     "lodash": "^4.17.15",
     "mathjs-expression-parser": "^1.0.2",
     "next": "9.3.5",
@@ -82,6 +84,7 @@
     "@next/bundle-analyzer": "^9.3.5",
     "@testing-library/cypress": "^6.0.0",
     "@types/classnames": "^2.2.10",
+    "@types/cookie-session": "^2.0.39",
     "@types/jest": "^25.2.1",
     "@types/lodash": "^4.14.150",
     "@types/next": "^9.0.0",
