--- a/.env-template
+++ b/.env-template
@@ -2,6 +2,7 @@
 FIREBASE_AUTH_DOMAIN=my-example-app.firebaseapp.com
 FIREBASE_DATABASE_URL=https://my-example-app.firebaseio.com
 FIREBASE_PROJECT_ID=my-example-app-id
+FIREBASE_CLIENT_EMAIL=my-email@gmail.com
 FIREBASE_PUBLIC_API_KEY=MyExampleAppAPIKey123
 FIREBASE_STORAGE_BUCKET=my-example-app.appspot.com
 FIREBASE_APP_ID=1:873423423:web:234234324324
