--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -2,7 +2,8 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "noEmit": false,
-    "types": ["@types/testing-library__cypress", "cypress"]
+    "types": ["@types/testing-library__cypress", "cypress"],
+    "noImplicitAny": false
   },
   "include": ["../node_modules/cypress"]
 }
