--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "babel-jest": "^25.4.0",
     "babel-loader": "^8.1.0",
     "cross-env": "^7.0.2",
+    "cypress-firebase": "^1.2.0",
     "cypress-testing-library": "^4.0.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.11.0",
