Fix eslint and deps upgrade

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "run-eslint": "eslint \"lib/**\" \"pages/**\" \"cypress/integration/**\"",
     "lint": "yarn check-eslint && prettier --check \"@(lib|pages)/**/*.tsx\" && yarn run-eslint",
     "lint:fix": "prettier --write \"@(lib|pages)/**/*.tsx\" \"@(lib|pages)/**/*.ts\" && yarn run-eslint --fix",
-    "test": "yarn test:unit && yarn test:e2e",
+    "test": "tsc -p . && yarn test:unit && yarn test:e2e",
     "test:unit": "jest",
     "test:unit-coverage": "jest --coverage",
     "test:unit-update": "jest --updateSnapshot",
@@ -48,7 +48,7 @@
     "@material-ui/core": "^4.10.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.54",
-    "@material-ui/pickers": "^3.2.10",
+    "@material-ui/pickers": "4.0.0-alpha.7",
     "@nivo/bar": "^0.61.1",
     "@nivo/line": "^0.61.1",
     "@nivo/pie": "^0.61.1",
