--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,13 @@
 {
   "compilerOptions": {
     "target": "es6",
-    "lib": ["es5", "es6", "es7", "es2017", "dom"],
+    "lib": [
+      "es5",
+      "es6",
+      "es7",
+      "es2017",
+      "dom"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
@@ -15,9 +21,23 @@
     "strict": true,
     "noImplicitReturns": true,
     "suppressImplicitAnyIndexErrors": true,
-    "types": ["node", "jest"],
-    "rootDirs": ["lib", "pages"],
+    "types": [
+      "node",
+      "jest"
+    ],
+    "rootDirs": [
+      "lib",
+      "pages"
+    ],
     "outDir": "build/lib"
   },
-  "include": ["next-env.d.ts", "lib/**/*.ts", "pages/**/*.tsx", "lib/**/*.tsx"]
+  "include": [
+    "next-env.d.ts",
+    "lib/**/*.ts",
+    "pages/**/*.tsx",
+    "lib/**/*.tsx"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
