Improve delete tx confirm dialog && fix TS errors

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "run-eslint": "eslint \"lib/**\" \"pages/**\" \"cypress/integration/**\"",
     "lint": "yarn check-eslint && prettier --check \"@(lib|pages)/**/*.tsx\" && yarn run-eslint",
     "lint:fix": "prettier --write \"@(lib|pages)/**/*.tsx\" \"@(lib|pages)/**/*.ts\" && yarn run-eslint --fix",
-    "test": "tsc -p . && yarn test:unit && yarn test:e2e",
+    "test": "yarn typescript && yarn test:unit && yarn test:e2e",
+    "typescript": "tsc -p .",
     "test:unit": "jest",
     "test:unit-coverage": "jest --coverage",
     "test:unit-update": "jest --updateSnapshot",
