Confirmation dialog refactor (possible to use keyboard to delete txs), shortcuts not pressable after button click fix, tests fix

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "yarn lint-staged",
+      "pre-commit": "yarn lint-staged && yarn typescript",
       "pre-push": "yarn test"
     }
   },
