--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -1,9 +1,7 @@
 {
   "extends": "../tsconfig.json",
-  "compilerOptions": {
-    "noEmit": false,
-    "types": ["@types/testing-library__cypress", "cypress"],
-    "noImplicitAny": false
-  },
-  "include": ["../node_modules/cypress", "./**/*.ts"]
+  "include": [
+    "../node_modules/cypress",
+    "*/*.ts"
+  ]
 }
