Remove nextjs dynamic routing to fix service worker cache

--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -1,13 +1,7 @@
 {
   "extends": "../tsconfig.json",
-  "compilerOptions": {
-    "strict": true,
-    "baseUrl": "../node_modules",
-    "target": "es5",
-    "lib": ["es5", "dom"],
-    "types": ["cypress"],
-    "isolatedModules": false,
-    "noImplicitAny": false
-  },
-  "include": ["**/*.ts"]
+  "include": [
+    "../node_modules/cypress",
+    "*/*.ts"
+  ]
 }
