Improve line chart for relative balance

--- a/package.json
+++ b/package.json
@@ -52,8 +52,23 @@
     "@nivo/pie": "^0.62.0",
     "@nivo/sunburst": "^0.62.0",
     "@siegrift/tsfunct": "^1.6.0",
+    "@types/d3-array": "^2.1.0",
+    "@visx/axis": "^1.0.0",
+    "@visx/brush": "^1.0.0",
+    "@visx/curve": "^1.0.0",
+    "@visx/gradient": "^1.0.0",
+    "@visx/grid": "^1.0.0",
+    "@visx/group": "^1.0.0",
+    "@visx/mock-data": "^1.0.0",
+    "@visx/pattern": "^1.0.0",
+    "@visx/responsive": "^1.0.0",
+    "@visx/scale": "^1.0.0",
+    "@visx/shape": "^1.0.0",
+    "@visx/tooltip": "^1.0.0",
     "classnames": "^2.2.6",
     "cookie-session": "^1.4.0",
+    "d3-array": "^2.8.0",
+    "d3-time-format": "^3.0.0",
     "date-fns": "^2.16.1",
     "dotenv": "^8.2.0",
     "firebase": "^7.21.1",
