--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@nivo/sunburst": "^0.63.1",
     "@siegrift/tsfunct": "^1.6.0",
     "@types/d3-array": "^2.3.0",
+    "@types/react-highlight.js": "^1.0.0",
     "@visx/axis": "^1.1.0",
     "@visx/brush": "^1.1.0",
     "@visx/curve": "^1.0.0",
@@ -80,6 +81,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-google-button": "^0.7.1",
+    "react-highlight.js": "^1.0.7",
     "react-icons": "^3.11.0",
     "react-number-format": "^4.4.1",
     "react-redux": "^7.2.1",
