--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@visx/scale": "^1.1.0",
     "@visx/shape": "^1.1.0",
     "@visx/tooltip": "^1.1.0",
+    "@zeit/next-css": "^1.0.1",
     "classnames": "^2.2.6",
     "cookie-session": "^1.4.0",
     "d3-array": "^2.8.0",
@@ -76,6 +77,7 @@
     "firebase-admin": "^9.3.0",
     "lodash": "^4.17.20",
     "mathjs-expression-parser": "^1.0.2",
+    "monaco-editor-webpack-plugin": "^2.0.0",
     "next": "9.5.5",
     "next-offline": "5.0.2",
     "react": "^17.0.1",
@@ -83,6 +85,7 @@
     "react-google-button": "^0.7.1",
     "react-highlight.js": "^1.0.7",
     "react-icons": "^3.11.0",
+    "react-monaco-editor": "^0.40.0",
     "react-number-format": "^4.4.1",
     "react-redux": "^7.2.1",
     "react-virtualized-auto-sizer": "^1.0.2",
@@ -91,6 +94,7 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
+    "url-loader": "^4.1.1",
     "uuid": "^8.3.1"
   },
   "devDependencies": {
