--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "firebase": "^7.24.0",
     "firebase-admin": "^9.3.0",
     "lodash": "^4.17.20",
+    "material-ui-dropzone": "^3.5.0",
     "mathjs-expression-parser": "^1.0.2",
     "monaco-editor-webpack-plugin": "^2.0.0",
     "next": "9.5.5",
