Implement filtering prototype

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@nivo/sunburst": "^0.63.1",
     "@siegrift/tsfunct": "^1.6.0",
     "@types/d3-array": "^2.3.0",
+    "@types/js-beautify": "^1.13.1",
     "@types/react-highlight.js": "^1.0.0",
     "@visx/axis": "^1.1.0",
     "@visx/brush": "^1.1.0",
@@ -75,6 +76,7 @@
     "dotenv": "^8.2.0",
     "firebase": "^7.24.0",
     "firebase-admin": "^9.3.0",
+    "js-beautify": "^1.13.4",
     "lodash": "^4.17.20",
     "material-ui-dropzone": "^3.5.0",
     "mathjs-expression-parser": "^1.0.2",
