--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "semi": false,
     "singleQuote": true,
     "trailingComma": "all",
-    "tabWidth": 2
+    "tabWidth": 2,
+    "endOfLine": "lf"
   },
   "lint-staged": {
     "*.{ts,tsx}": [
