Update eslint configuration

--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -1,7 +1,10 @@
 {
   "extends": "../tsconfig.json",
   "include": [
+    ".eslintrc.js",
     "../node_modules/cypress",
     "*/*.ts"
-  ]
+  ],
+  // TODO: Fix types
+  "types": ["cypress"]
 }
