--- a/package.json
+++ b/package.json
@@ -6,10 +6,9 @@
     "build": "next build",
     "deploy": "yarn build && vercel --prod",
     "dev": "NODE_OPTIONS=--max_old_space_size=8192 next dev",
-    "check-eslint": "eslint --print-config pages/index.js | eslint-config-prettier-check",
-    "run-eslint": "eslint \"lib/**\" \"pages/**\" \"cypress/integration/**\"",
-    "lint": "yarn check-eslint && prettier --check \"@(lib|pages)/**/*.tsx\" && yarn run-eslint",
-    "lint:fix": "prettier --write \"@(lib|pages)/**/*.tsx\" \"@(lib|pages)/**/*.ts\" && yarn run-eslint --fix",
+    "format": "prettier --check \"@(lib|pages)/**/*.tsx\" && yarn run-eslint",
+    "lint": "yarn eslint --ext js,ts,tsx . --max-warnings 0",
+    "lint:fix": "yarn lint --fix",
     "test": "yarn typescript && yarn test:unit && yarn test:e2e",
     "typescript": "tsc -p .",
     "test:unit": "jest",
@@ -48,6 +47,7 @@
     "@nivo/pie": "^0.63.1",
     "@nivo/sunburst": "^0.63.1",
     "@siegrift/tsfunct": "^1.6.0",
+    "@types/js-beautify": "^1.13.3",
     "@visx/responsive": "^1.1.0",
     "@zeit/next-css": "^1.0.1",
     "classnames": "^2.3.1",
@@ -102,15 +102,10 @@
     "cypress-plugin-tab": "^1.0.5",
     "cypress-testing-library": "^4.0.0",
     "eslint": "^7.12.0",
-    "eslint-config-prettier": "^6.14.0",
-    "eslint-config-react-app": "^6.0.0",
-    "eslint-loader": "^4.0.2",
     "eslint-plugin-cypress": "^2.12.1",
-    "eslint-plugin-flowtype": "^5.2.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jest": "^24.1.0",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-jest-formatting": "^3.0.0",
     "eslint-plugin-react": "^7.27.0",
     "firebase-mock": "^2.3.2",
     "husky": "^4.3.0",
