--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# NOTE: Make sure to add the ignored files to ".eslintignore" and ".prettierignore" as well
 
 # dependencies
 /node_modules
