--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
   "devDependencies": {
     "@next/bundle-analyzer": "^9.5.5",
     "@testing-library/cypress": "^7.0.1",
+    "@types/cypress": "^1.1.3",
     "@types/jest": "^26.0.15",
     "@types/lodash": "^4.14.177",
     "@types/next": "^9.0.0",
@@ -81,6 +82,7 @@
     "@typescript-eslint/eslint-plugin": "^4.5.0",
     "@typescript-eslint/parser": "^4.5.0",
     "cross-env": "^7.0.3",
+    "cypress": "^9.0.0",
     "cypress-firebase": "^1.5.0",
     "cypress-plugin-tab": "^1.0.5",
     "cypress-testing-library": "^4.0.0",
