--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "test:unit:watch": "jest --watch",
     "test:unit": "jest",
     "test": "yarn typescript && yarn test:unit && yarn test:e2e",
+    "typescript:watch": "tsc -p . --watch",
     "typescript": "tsc -p .",
     "prepare": "husky install"
   },
@@ -66,7 +67,7 @@
     "@next/bundle-analyzer": "^9.5.5",
     "@testing-library/cypress": "^7.0.1",
     "@types/cypress": "^1.1.3",
-    "@types/jest": "^26.0.15",
+    "@types/jest": "^27.0.2",
     "@types/lodash": "^4.14.177",
     "@types/next": "^9.0.0",
     "@types/node": "^14.14.2",
@@ -94,11 +95,11 @@
     "eslint-plugin-react": "^7.27.0",
     "firebase-mock": "^2.3.2",
     "husky": "^7.0.4",
-    "jest": "^26.6.1",
+    "jest": "^27.3.1",
     "prettier": "^2.4.1",
     "pretty-quick": "^3.1.2",
     "start-server-and-test": "^1.14.0",
-    "ts-jest": "^26.4.2",
-    "typescript": "^4.4.4"
+    "ts-jest": "^27.0.7",
+    "typescript": "^4.5.2"
   }
 }
