Speed up jest tests

--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "test:e2e:run": "cypress run",
     "test:e2e:start-server": "next dev -p 3000",
     "test:e2e": "start-server-and-test \"yarn test:e2e:start-server\" http://localhost:3000 \"yarn test:e2e:run\"",
-    "test:unit:watch": "jest --watch",
-    "test:unit": "jest",
+    "test:unit:watch": "yarn test:unit --watch",
+    "test:unit": "jest --runInBand",
     "test": "yarn typescript && yarn test:unit && yarn test:e2e",
     "typescript:watch": "tsc -p . --watch",
     "typescript": "tsc -p .",
