--- a/package.json
+++ b/package.json
@@ -27,14 +27,13 @@
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.56",
-    "@material-ui/pickers": "4.0.0-alpha.11",
+    "@material-ui/pickers": "^4.0.0-alpha.11",
     "@nivo/line": "^0.63.1",
     "@nivo/pie": "^0.63.1",
     "@nivo/sunburst": "^0.63.1",
     "@siegrift/tsfunct": "^1.6.0",
     "@types/js-beautify": "^1.13.3",
     "@visx/responsive": "^1.1.0",
-    "@zeit/next-css": "^1.0.1",
     "classnames": "^2.3.1",
     "date-fns": "^2.25.0",
     "dotenv": "^8.2.0",
@@ -45,8 +44,8 @@
     "material-ui-dropzone": "^3.5.0",
     "mathjs-expression-parser": "^1.0.2",
     "monaco-editor-webpack-plugin": "^2.0.0",
-    "next": "9.5.5",
-    "next-offline": "5.0.5",
+    "next": "^12.0.4",
+    "next-offline": "^5.0.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-button": "^0.7.2",
