--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@material-ui/pickers": "^4.0.0-alpha.11",
+    "@monaco-editor/react": "^4.3.1",
     "@nivo/line": "^0.63.1",
     "@nivo/pie": "^0.63.1",
     "@nivo/sunburst": "^0.63.1",
@@ -43,7 +44,6 @@
     "lodash": "^4.17.21",
     "material-ui-dropzone": "^3.5.0",
     "mathjs-expression-parser": "^1.0.2",
-    "monaco-editor-webpack-plugin": "^2.0.0",
     "next": "^12.0.4",
     "next-offline": "^5.0.5",
     "react": "^17.0.2",
@@ -51,7 +51,6 @@
     "react-google-button": "^0.7.2",
     "react-highlight.js": "^1.0.7",
     "react-icons": "^3.11.0",
-    "react-monaco-editor": "^0.40.0",
     "react-number-format": "^4.8.0",
     "react-redux": "^7.2.6",
     "react-virtualized-auto-sizer": "^1.0.6",
