--- a/package.json
+++ b/package.json
@@ -29,12 +29,13 @@
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@material-ui/pickers": "^4.0.0-alpha.11",
     "@monaco-editor/react": "^4.3.1",
-    "@nivo/line": "^0.63.1",
-    "@nivo/pie": "^0.63.1",
-    "@nivo/sunburst": "^0.63.1",
+    "@nivo/core": "^0.74.0",
+    "@nivo/line": "^0.74.0",
+    "@nivo/pie": "^0.74.0",
+    "@nivo/sunburst": "^0.74.0",
     "@siegrift/tsfunct": "^1.6.0",
     "@types/js-beautify": "^1.13.3",
-    "@visx/responsive": "^1.1.0",
+    "@visx/responsive": "^2.4.1",
     "classnames": "^2.3.1",
     "date-fns": "^2.25.0",
     "dotenv": "^10.0.0",
@@ -50,7 +51,7 @@
     "react-dom": "^17.0.2",
     "react-google-button": "^0.7.2",
     "react-highlight.js": "^1.0.7",
-    "react-icons": "^3.11.0",
+    "react-icons": "^4.3.1",
     "react-number-format": "^4.8.0",
     "react-redux": "^7.2.6",
     "react-virtualized-auto-sizer": "^1.0.6",
