--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "analyze": "cross-env ANALYZE=true next build",
     "build": "next build",
     "deploy": "yarn build && vercel --prod",
-    "dev": "NODE_OPTIONS=--max_old_space_size=8192 next dev",
+    "dev": "ENVIRONMENT=development NODE_OPTIONS=--max_old_space_size=8192 next dev",
     "lint:fix": "yarn lint --fix",
     "lint": "yarn eslint --ext js,ts,tsx . --max-warnings 0",
     "prettier:fix:quick": "pretty-quick --staged",
@@ -14,7 +14,7 @@
     "prettier": "prettier --check \"./**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
     "test:e2e:open": "cypress open",
     "test:e2e:run": "cypress run",
-    "test:e2e:start-server": "next dev -p 3000",
+    "test:e2e:start-server": "ENVIRONMENT=staging next dev -p 3000",
     "test:e2e": "start-server-and-test \"yarn test:e2e:start-server\" http://localhost:3000 \"yarn test:e2e:run\"",
     "test:unit:watch": "yarn test:unit --watch",
     "test:unit": "jest --runInBand",
