--- a/.env-template
+++ b/.env-template
@@ -1,10 +1,7 @@
-# Firebase app's values.
+# Firebase configuration
 FIREBASE_AUTH_DOMAIN=my-example-app.firebaseapp.com
 FIREBASE_PROJECT_ID=my-example-app-id
 FIREBASE_PUBLIC_API_KEY=MyExampleAppAPIKey123
 FIREBASE_STORAGE_BUCKET=my-example-app.appspot.com
 FIREBASE_APP_ID=1:873423423:web:234234324324
 FIREBASE_MESSAGING_SENDER_ID=873423423
-
-# Your Firebase private key.
-FIREBASE_PRIVATE_KEY=some-key-here
