Fix e2e tests local configuration

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,11 +46,11 @@ jobs:
     steps:
       - name: Clone expense-manager
         uses: actions/checkout@v2
-      - name: Create .env-staging
+      - name: Create .env-dev
         env:
           ENV_SECRETS: ${{ secrets.ENV_SECRETS }}
         # This seems to be the easiest way: https://stackoverflow.com/a/64452700/7227455
-        run: echo $ENV_SECRETS | base64 -d > .env-staging
+        run: echo $ENV_SECRETS | base64 -d > .env-dev
       - name: Create serviceAccount.json
         env:
           SERVICE_ACCOUNT: ${{ secrets.SERVICE_ACCOUNT }}
