--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "license": "MIT",
   "scripts": {
-    "analyze": "cross-env ANALYZE=true next build",
+    "analyze": "cross-env ANALYZE=true yarn build",
     "build": "next build",
     "deploy": "yarn build && vercel --prod",
-    "dev": "ENVIRONMENT=development NODE_OPTIONS=--max_old_space_size=8192 next dev",
+    "dev": "cross-env NODE_OPTIONS=--max_old_space_size=8192 next dev",
     "lint:fix": "yarn lint --fix",
     "lint": "yarn eslint --ext js,ts,tsx . --max-warnings 0",
     "prettier:fix:quick": "pretty-quick --staged",
@@ -14,8 +14,8 @@
     "prettier": "prettier --check \"./**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
     "test:e2e:open": "cypress open",
     "test:e2e:run": "cypress run",
-    "test:e2e:ci:build-app": "ENVIRONMENT=staging yarn build",
-    "test:e2e:ci:start-app": "ENVIRONMENT=staging next start",
+    "test:e2e:ci:build-app": "cross-env ENVIRONMENT=development next build",
+    "test:e2e:ci:start-app": "cross-env ENVIRONMENT=development next start",
     "test:unit:watch": "yarn test:unit --watch",
     "test:unit": "jest --runInBand",
     "test": "yarn typescript && yarn test:unit && yarn test:e2e",
