--- a/.env-template
+++ b/.env-template
@@ -5,3 +5,10 @@ FIREBASE_PUBLIC_API_KEY=MyExampleAppAPIKey123
 FIREBASE_STORAGE_BUCKET=my-example-app.appspot.com
 FIREBASE_APP_ID=1:873423423:web:234234324324
 FIREBASE_MESSAGING_SENDER_ID=873423423
+
+# Only necessary for cypress e2e tests. Should be a valid "uid" of a logged in user.
+# The data on this account will be removed after every test. The recommended way is
+# to create a new "testing" gmail account and determine its "uid". You can do this
+# by signing in to the application and checking the global state or firebase (firestore)
+# admin page.
+FIREBASE_TEST_ACCOUNT_UID=Av1smpJbjPNQLtqgV1s2nVyIoVB3
